crates/pixi_glob/src/snapshots/pixi_glob__glob_hash__test__glob_hash_case_1_satisfiability.snap
---
source: crates/pixi_glob/src/glob_hash.rs
expression: snapshot
---
Globs:
- tests/data/satisfiability/source-dependency/**/*
Hash: 133398b2bf6dbe1cd362245f8e7c4e0f20a9abf647a56f418fc415fcd3e3caf8
Matched files:
- tests/data/satisfiability/source-dependency/child-package/pixi.toml
- tests/data/satisfiability/source-dependency/pixi.lock
- tests/data/satisfiability/source-dependency/pixi.toml
