crates/pixi_glob/src/snapshots/pixi_glob__glob_hash__test__glob_hash_case_2_satisfiability_ignore_lock.snap
---
source: crates/pixi_glob/src/glob_hash.rs
expression: snapshot
---
Globs:
- tests/data/satisfiability/source-dependency/**/*
- !tests/data/satisfiability/source-dependency/**/*.lock
Hash: 1d18ca16c8edeff2730ac60c12c5079f64b83011526f4147441851aff3d96f3f
Matched files:
- tests/data/satisfiability/source-dependency/child-package/pixi.toml
- tests/data/satisfiability/source-dependency/pixi.toml
