crates/pixi_glob/src/snapshots/pixi_glob__glob_hash__test__glob_hash_case_3_non_glob.snap
---
source: crates/pixi_glob/src/glob_hash.rs
expression: snapshot
---
Globs:
- tests/data/satisfiability/source-dependency/pixi.toml
Hash: 99028f65347c34f5003d3ba258ff0c9f612749277653cfd96967398ec6cfd8db
Matched files:
- tests/data/satisfiability/source-dependency/pixi.toml
